utils/configs/front-envoy-config-test.yaml
# API Envoy IP: 172.10.0.10
static_resources:
  listeners:
  - name: listener_https
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 8080    
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: front_proxy
          http_filters:
          # custom filter
          - name: sample
            typed_config:
              "@type": type.googleapis.com/sample.Decoder
              key: via
              val: sample-filter
          - name: envoy.filters.http.router
          route_config:
            virtual_hosts:
            - name: direct_response_service
              domains: ["*"]
              routes:
              - match: {prefix: "/"}
                direct_response:
                  status: 200
                  body:
                    inline_string: "Response from Envoy"

# ref: https://www.envoyproxy.io/docs/envoy/latest/operations/admin
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
